--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -5,7 +5,6 @@
     height: 100%;
     align-items: center;
     margin: auto;
-    z-index: 0;
 }
 
 .content {
