--- a/components/search.module.css
+++ b/components/search.module.css
@@ -1,4 +1,5 @@
 .searchSection {
+    background-color: var(--bs-body-bg);
     z-index: 1;
 }
 
